--- a/webapp.tex
+++ b/webapp.tex
@@ -1,1 +1,54 @@
 \chapter{Mobile und hybride Web Applications}
+
+\section{Mobile Webapplications}
+
+\subsection{Motivation}
+
+Mobile Webapplications bieten folgenden Vorteile:
+\begin{itemize}
+	\item Eine Code-Basis für mehrere/alle Plattformen
+	\item Kein App-Store, Download oder Installieren notwendig
+	\item App Kann jederzeit veröffentlicht/verändert werden
+	\item Vorhandene Web-Applikation kann zu mobiler App erweitert werden (Stichwort ''Responsive Web Design'')
+\end{itemize}
+und folgende Nachteile:
+\begin{itemize}
+	\item Kein Zugriff auf alle Funktionen (Kontakte, ext. HW, \dots)
+	\item Jedoch: HTML5 kann immer mehr! (Storage, Kamera, Geo, Gyro, \dots)
+	\item Unterstützung verschiedener mobiler Browser kann aufwändig sein
+	\item App nicht im Store, Benutzer müssen sie finden (Marketing!)
+	\item Keine App installiert (App-Icon zur Identifikation!) $\rightarrow$ Ggf. Browser-Lesezeichen auf Homescreen\dots
+\end{itemize}
+Neben den oben genannten Nachteilen hat man folgende Probleme bei der Entwicklung von Web Pages auf mobilen Geräten:
+\begin{itemize}
+	\item Limitierte Grösse des Displays
+	\item Portrait / Landscape Modes
+	\item Interaktion: Touch ist keine Maus
+	\item Gesten und andere Benutzerinteraktionen
+	\item Keinen Zugriff auf HW Resourcen der Geräte (Kamera, GPS, Storage...) oder SW Resourcen (Kontakte, \dots)
+\end{itemize}
+Verschiedene Toolkits adressieren diese Probleme (z.B. Bootstrap, Ionic, JQueryMobile usw.).
+
+\subsection{Architektur}
+
+Eine Web Applikation besteht aus HTML (Struktur), CSS (Darstellung), JavaScript (Verhalten). Es gibt vier Möglichkeiten Javascript einzubinden:
+\begin{enumerate}
+	\item Inline (\texttt{<script></script>})
+	\item External File (\texttt{<script src="something.js"/>})
+	\item HTML event handler (\texttt{onclick=""})
+	\item URL mit \texttt{javascript:} protocol (veraltet)
+\end{enumerate}
+
+\section{Bootstrap}
+
+Bootstrap ist ein CSS/Javascript Framework welches den mobile first Ansatz verfolgt. Es eignet sich aber auch für Desktops, besonders weil es sich um eine einheitliche Darstellung von HTML-Elementen in verschiedenen Browsern kümmert. Es bietet ein Grid System, Klassen für Tabellen, Buttons usw. und ein Icon Set.
+
+\section{jQuery Mobile}
+
+jQuery Mobile ist ein Framework um mobile Websites zu erstellen. Die einzelnen Elemente (\texttt{<div></div>}) werden mit dem Attribut \texttt{data-role} genauer bezeichnet. Es gibt z.B. den Wert \texttt{page} für eine Seite und in jeder Page gibt es einen \texttt{header}, \texttt{content} und einen \texttt{footer}. Die Pages werden mit einer \texttt{id} versehen und können mit dieser \texttt{id} in einem Link referenziert werden. Mit dem Wert \texttt{listview} kann auch eine Liste inklusive Navigation erstellt werden. Mit dem Wert \texttt{data-theme} kann das Farbschema eines Grundlayouts geändert werden.
+
+Mit der normalen jQuery Framework kann die DOM auf eine einfache Art und Weise manipuliert werden. Mit dem \texttt{\$(\dots)} können CSS-IDs, CSS-Klassen und HTML-Elemente ausgewählt und manipuliert werden. Auch eine Kommunikation mit dem Server über Ajax ist möglich. 
+
+\section{Hybrids: Cordova/Phonegap}
+
+Cordova/Phonegap basiert auf HTML5, CSS3 und Javascript und bietet mittels Plugins Zugriff auf die Ressourcen des Gerätes. Phonegap wurde von Adobe gekauft und die Codebase hatten sie dem Apache Projekt überlassen. Apache entwickelt das Projekt unter dem Namen Cordova weiter. Phonegap ist eine Distribution von Cordova und bietet eine einfachen Zugriff auf Adobe-Dienste. Cordova lässt sich mit npm installieren und mit wenigen Befehlen ist eine App erstellt. Diese kann anschliessend in ein natives Format (z.B. apk) gepackt und emuliert werden.
